<resources>
    <string name="app_name">Medic</string>
    <string name="password">Şifre</string>
    <string name="enter">Uygulamaya Gir</string>
    <string name="username">TC Kimlik Numarası</string>
    <string name="background">background</string>
    <string name="logo">logo</string>
    <string name="kayit_ol">Kayıt Ol</string>
    <string name="giris_yap">Giriş Yap</string>
    <string name="telefon_numarasi">Telefon Numarası</string>
    <string name="soyisim">Soyisim</string>
    <string name="isim">İsim</string>
    <string name="email">E-Posta</string>
    <string name="forgot_password">Şifremi Unuttum</string>
    <string name="go_back">Geri Dön</string>
    <string name="kimlik_no">TC Kimlik Numarası</string>
    <string name="name_surname">İsim Soyisim</string>
    <string name="medics">Doktorlar</string>
    <string name="medication">İlaçlarım</string>
    <string name="settings">Ayarlar</string>
    <string name="patients">Hastalar</string>
    <string name="add_patient">Hasta Ekle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_information">Bilgileri Güncelle</string>
    <string name="logout">Çıkış Yap</string>
    <string name="search_user">Kullanıcı Ara</string>
    <string name="remove_patient">Hasta Kaldır</string>
    <string name="add_medication">İlaç Ekle</string>
    <string name="add">EKLE</string>
    <string name="cancel">İPTAL</string>
    <string name="medication_name">İlaç Adı</string>
    <string name="times_per_day">Günde Kaç Kere</string>
</resources>