<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.LoginActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="fitXY"
        android:src="@drawable/background" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="15dp"
        android:outlineAmbientShadowColor="@android:color/transparent"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        tools:targetApi="p">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/logo"
                android:scaleType="fitXY"
                android:src="@drawable/logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                app:boxStrokeColor="#ce1614"
                app:hintTextColor="@color/black"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#d5cfcf"
                    android:hint="@string/username" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="#ce1614"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:background="#d5cfcf"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/signUpView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:visibility="visible">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="#ce1614"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#d5cfcf"
                        android:hint="@string/isim" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="#ce1614"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/surnameField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#d5cfcf"
                        android:hint="@string/soyisim" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="#ce1614"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mailField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#d5cfcf"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="#ce1614"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#d5cfcf"
                        android:hint="@string/telefon_numarasi" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <Button
                    android:id="@+id/signin"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="#ce1614"
                    android:text="@string/giris_yap"
                    android:textColor="#d5cfcf" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/signup"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="#ce1614"
                    android:text="@string/kayit_ol"
                    android:textColor="#d5cfcf" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/forgot_password"
                android:textAlignment="center"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>