<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="15dp"
    android:paddingBottom="15dp"
    android:orientation="vertical"
    android:background="@color/red">

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d5cfcf"
            android:hint="@string/medication_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tpdField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d5cfcf"
            android:inputType="number"
            android:hint="@string/times_per_day" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/addButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/add"/>

        <Space
            android:layout_width="25dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>

    </LinearLayout>

</LinearLayout>